Mut4All/bug-labels/c++/bugzilla/27603.txt
Issue Title:
Assertion failure when recovering from unknown identifier.

Source Code & Bug Trace:
class Runner {
  void Run();
};

template <typename, typename>
class Two {};
template <typename>
class One {};
class Zero {};

namespace {

void Stop(const Two<int, One<Unknown>>&) {}
}

const int kTwenty = 20;

void Runner::Run() {
  switch (0)
  case 0:
  Zero zero;
}

test.cc:13:30: error: use of undeclared identifier 'Unknown'
void Stop(const Two<int, One<Unknown>>&) {}
                             ^
test.cc:14:1: error: expected a type
}
^
test.cc:16:23: error: expected ')'
const int kTwenty = 20;
                      ^
test.cc:13:10: note: to match this '('
void Stop(const Two<int, One<Unknown>>&) {}
         ^
test.cc:18:14: error: cannot define or redeclare 'Run' here because namespace ''
      does not enclose namespace 'Runner'
void Runner::Run() {
     ~~~~~~~~^
clang-3.5: ../include/llvm/ADT/SmallVector.h:164: reference llvm::SmallVectorTemplateCommon<clang::SwitchStmt *, void>::back() [T = clang::SwitchStmt *]: Assertion `!empty()' failed.


Bug Labels:
bugzilla, clang:frontend, crash-on-invalid